# ChangeLog for dev-perl/OpenCA-DBI
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> OpenCA-DBI-1.11.ebuild:
  stable in x86

*OpenCA-DBI-1.11 (06 Aug 2009)

  06 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +OpenCA-DBI-1.11.ebuild, +metadata.xml:
  Initial recommit in my-dev overlay
