@@ -1,4 +1,4 @@
-DIST openca-base-1.0.2.tar.gz 9267407 RMD160 7b1094541ec63ffef012f976e2c8111d6303afdf SHA1 8a2d49b676c75961c6ec03faf05cab1dd44ac561 SHA256 976c28e38b027a5ccaa48fd398c8e2b12e993ae9e84efbbb3cdad084c7c80921
-EBUILD OpenCA-DBI-1.11.ebuild 441 RMD160 8f2aef29a2037c1712220c9bd9aa2dda6cd8308f SHA1 366b0f786b566f0a503eb3090d7353cb927f9734 SHA256 b350664424647db2f71581bde473d73fa501f371feb50b8ebe647f807bec61f4
-MISC ChangeLog 379 RMD160 025e0a1174d93da312f67cbcae62b9891b7e8b78 SHA1 fa29a7ce5cd82dbe94b9233e43e851393a8ec6f5 SHA256 00fa07219253c01f4ff26cf8816500e24062a24d2ac74c7c0cf11e679b960875
+DIST openca-base-1.1.0.tar.gz 8075152 RMD160 840a3f5ab86bb409089c57e5c1c2878a2bc1e4d8 SHA1 9263f90bba9c10b5f0934c26df539e3cd0af98d1 SHA256 2bf47cb06ce74983544acdb546beeef4bb1b00dfd8a734a1e3254b5c4a80fbe4
+EBUILD OpenCA-DBI-1.11-r1.ebuild 774 RMD160 6ba2aed59c800b1d4e56d3148533cb602f5209f4 SHA1 a490010608a254033bd8620d28058ab2574e8105 SHA256 5504b721a01bac5a0584095c308c219cef29baed72510fc437928c3a377619ba
+MISC ChangeLog 503 RMD160 f542d442b6deda365e7e7dd4565750d49387811f SHA1 b511cbf880659113583b0f115faca05d25ceef83 SHA256 363708b26d0e887790f21781ffcfa047bc74270f07b340f92e44482b3be18d3f
 MISC metadata.xml 451 RMD160 bebaf933574ed284d421b45f067228073e0e93ae SHA1 f1ced5ba9fd30a889e4b36958bae899ce228dd22 SHA256 2af9704b2f53dcd1979a249e4279d8e045b8ef10effe9def89623a6ece72063f
