@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/OpenCA-DBI
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -OpenCA-DBI-1.11.ebuild, +OpenCA-DBI-1.11-r1.ebuild:
+  clean eclass
 
   11 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> OpenCA-DBI-1.11.ebuild:
   stable in x86
